$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.273 2005/12/12 11:41:50 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.61
-----------------

PH/01 The code for finding all the local interface addresses on a FreeBSD
      system running IPv6 was broken. This may well have applied to all BSD
      systems, as well as to others that have similar system calls. The broken
      code found IPv4 interfaces correctly, but gave incorrect values for the
      IPv6 interfaces. In particular, ::1 was not found. The effect in Exim was
      that it would not match correctly against @[] and not recognize the IPv6
      addresses as local.

PH/02 The ipliteral router was not recognizing addresses of the form user@
      [ipv6:....] because it didn't know about the "ipv6:" prefix.

PH/03 Added disable_ipv6.

PH/04 Changed $reply_address to use the raw form of the headers instead of the
      decoded form, because it is most often used to construct To: headers
      lines in autoreplies, and the decoded form may well be syntactically
      invalid. However, $reply_address has leading white space removed, and all
      newlines turned into spaces so that the autoreply transport does not
      grumble.

PH/05 If group was specified without a user on a router, and no group or user
      was specified on a transport, the group from the router was ignored.


Exim version 4.60
-----------------

PH/01 Two changes to the default runtime configuration:

      (1) Move the checks for relay_from_hosts and authenticated clients from
          after to before the (commented out) DNS black list checks.

      (2) Add control=submission to the relay_from_hosts and authenticated
          clients checks, on the grounds that messages accepted by these
          statements are most likely to be submissions.

PH/02 Several tidies to the handling of ${prvs and ${prvscheck:
